Last commit from 3/31/24

--- a/portfolio_app/templates/portfolio_app/index.html
+++ b/portfolio_app/templates/portfolio_app/index.html
@@ -1,13 +1,13 @@
 <!-- inherit from base.html-->
 {% extends "portfolio_app/base_template.html" %}
 
-
 <!-- Replace block content in base_template.html -->
 {% block content %}
-<h1>Computer Science Portfolios</h1>
 
-
-<h2>More to come from [and your name goes here]</h2>
-
+<p>
+    This is DG, A disc golf app for everyone!
+    Once you sign up, you will be able to join groups for playtimes at courses near you based on skill level.
+</p>
+<h1>Recent posts</h1>
 
 {% endblock %}
