--- a/portfolio_app/templates/portfolio_app/base_template.html
+++ b/portfolio_app/templates/portfolio_app/base_template.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load django_bootstrap5 %}
+
 
 
 <!DOCTYPE html>
@@ -27,7 +27,7 @@
             <div class="navbar-nav">
               <!--  {% url 'index' %}  is defined in url path to dynamically create url -->
               <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
-              <a class="nav-link" href="{% url 'post' %}">Posts</a>
+              <a class="nav-link" href="{% url 'PostsView' %}">Posts</a>
               {% if user.is_authenticated %}
                 <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{user}}</a>
               {% else %}
