trying to add some new features, use as revert point

--- a/portfolio_app/templates/portfolio_app/post_details.html
+++ b/portfolio_app/templates/portfolio_app/post_details.html
@@ -9,10 +9,8 @@
 <ul class="list-group">
     {% for i in Post %}
         <li class="list-group-item">{{ i.name }}
-            <a class="nav-link" href="#">Sign Up for Session</a>
-            <a class="nav-link" href="#">More Information</a>
-
-        </li>
+            <a class="nav-link" href="#">Edit Post</a>
+            <a class="nav-link" href="#">Delete Post</a>
     {% endfor %}
 </ul>
 {% endblock %}
