--- a/portfolio_app/templates/portfolio_app/post_details.html
+++ b/portfolio_app/templates/portfolio_app/post_details.html
@@ -1,16 +1,10 @@
-<!-- inherit from base.html-->
 {% extends "portfolio_app/base_template.html" %}
-
-<!-- Replace block content in base_template.html -->
 {% block content %}
-<p>Here you can view all posts from other users join posts to sign up to play, or create posts for others to join</p>
-<h1>All posts</h1>
-<a class="nav-link" href="#">Create Post</a>
-<ul class="list-group">
-    {% for i in Post %}
-        <li class="list-group-item">{{ i.name }}
-            <a class="nav-link" href="#">Edit Post</a>
-            <a class="nav-link" href="#">Delete Post</a>
-    {% endfor %}
-</ul>
+<h1>Post Details</h1>
+<p><strong>Location:</strong> {{ post.location }}</p>
+<p><strong>User:</strong> {{ post.user.name }}</p>
+<p><strong>Skill Level:</strong> {{ post.user.get_skill_level_display }}</p>
+<p><strong>Number of Users Joined:</strong> {{ post.num_joined }}</p>
+<a href="{% url 'update_post' pk=post.pk %}" class="btn btn-warning">Edit Post</a>
+<a href="{% url 'delete_post' pk=post.pk %}" class="btn btn-danger">Delete Post</a>
 {% endblock %}
