--- a/portfolio_app/templates/portfolio_app/posts_page.html
+++ b/portfolio_app/templates/portfolio_app/posts_page.html
@@ -1,17 +1,18 @@
-<!-- inherit from base.html-->
 {% extends "portfolio_app/base_template.html" %}
-
-<!-- Replace block content in base_template.html -->
 {% block content %}
-<p>Here you can view all posts from other users join posts to sign up to play, or create posts for others to join</p>
 <h1>All posts</h1>
-<a class="nav-link" href="#">Create Post</a>
+<a href="{% url 'create_post' %}" class="btn btn-primary">Create Post</a>
 <ul class="list-group">
-    {% for i in Post %}
-        <li class="list-group-item">{{ i.name }}
-            <a class="nav-link" href="#">Sign Up for Session</a>
-            <a class="nav-link" href="#">More Information</a>
-
+    {% for post in posts %}
+        <li class="list-group-item">
+            <strong>Location:</strong> {{ post.location }}<br>
+            <strong>User:</strong> {{ post.user.name }}<br>
+            <strong>Number of Users Joined:</strong> {{ post.num_joined }}<br>
+            <form action="{% url 'join_post' pk=post.pk %}" method="post" style="display:inline;">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-success">Join Post</button>
+            </form>
+            <a href="{% url 'post_detail' pk=post.pk %}" class="btn btn-primary">View Details</a>
         </li>
     {% endfor %}
 </ul>
