--- a/portfolio_app/templates/portfolio_app/base_template.html
+++ b/portfolio_app/templates/portfolio_app/base_template.html
@@ -21,22 +21,22 @@
         <img src="{% static 'images/uccs_logo.gif' %}">
         <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav">
-              <!--  {% url 'index' %}  is defined in url path to dynamically create url -->
-              <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
-              <a class="nav-link" href="{% url 'posts_page' %}">Posts</a>
-              {% if user.is_authenticated %}
-                <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{user}}</a>
-              {% else %}
-                <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a>
-              {% endif %}
+                <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                <a class="nav-link" href="{% url 'posts_page' %}">Posts</a>
+                {% if user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{ user }}</a>
+                {% else %}
+                    <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a>
+                {% endif %}
+                <a class="nav-link" href="{% url 'create_user' %}">Create Account</a> <!-- Add this line for creating account -->
             </div>
-          </div>
         </div>
-      </nav>
+        </div>
+    </nav>
 
 
         <div class="col-sm-10">
