--- a/portfolio_app/templates/portfolio_app/create_account.html
+++ b/portfolio_app/templates/portfolio_app/create_account.html
@@ -1,10 +1,11 @@
+<!-- create_account.html -->
 {% extends "portfolio_app/base_template.html" %}
 {% block content %}
-<h1>Create Post</h1>
+<h1>Create Account</h1>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create</button>
+    <button type="submit">Create Account</button>
 </form>
 {% endblock %}
