--- a/portfolio_app/templates/portfolio_app/login.html
+++ b/portfolio_app/templates/portfolio_app/login.html
@@ -1,10 +1,10 @@
 {% extends "portfolio_app/base_template.html" %}
 {% block content %}
-<h1>Create Post</h1>
+<h1>Login</h1>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create</button>
+    <button type="submit">Login</button>
 </form>
 {% endblock %}
