--- a/portfolio_app/templates/portfolio_app/login.html
+++ b/portfolio_app/templates/portfolio_app/login.html
@@ -1,10 +1,44 @@
-{% extends "portfolio_app/base_template.html" %}
-{% block content %}
-<h1>Login</h1>
+<!-- inherit from base.html -->
+{% extends 'portfolio_app/base_template.html' %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+{% block content %}
+
+    <!-- doesn't work correctly - do not want to do all messages-->
+    {% for message in messages %}
+        <p>{{message}}</p>
+    {% endfor %}
+
+    {% if form.errors %}
+        <p>Your email and password didn't match. Please try again.</p>
+    {% endif %}
+
+    {% if next %}
+        {% if user.is_authenticated %}
+        <p>Your account doesn't have access to this page. To proceed,
+        please login with an account that has access.</p>
+        {% else %}
+        <p>Please login to see this page.</p>
+        {% endif %}
+    {% endif %}
+
+    <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <table>
+        <tr>
+            <td>{{ form.email.label_tag }}</td>
+            <td>{{ form.email }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.password.label_tag }}</td>
+            <td>{{ form.password }}</td>
+        </tr>
+        </table>
+        <input type="submit" value="login">
+        <input type="hidden" name="next" value="{{ next }}">
+    </form>
+
+    {# Assumes you setup the password_reset view in your URLconf #}
+    <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+    <p><a href="{% url 'register_page' %}">Register</a></p>
+
 {% endblock %}
