--- a/portfolio_app/templates/portfolio_app/base_template.html
+++ b/portfolio_app/templates/portfolio_app/base_template.html
@@ -1,51 +1,41 @@
 {% load static %}
-
-
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  </head>
-
-
-  <body>
-    <div class="container-fluid">
-
-
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">       
+</head>
+<body>
+<div class="container-fluid">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <img src="{% static 'images/uccs_logo.gif' %}">
         <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
-                <a class="nav-link" href="{% url 'posts_page' %}">Posts</a>
-                {% if user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{ user }}</a>
-                {% else %}
-                    <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a>
-                    <a class="nav-link" href="{% url 'register_page' %}">Create Account</a>
-                {% endif %}
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                    <a class="nav-link" href="{% url 'posts_page' %}">Posts</a>
+                    {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'logout' %}?next={{ request.path }}">Logout {{ user.email }}</a>
+                    {% else %}
+                        <a class="nav-link" href="{% url 'login' %}?next={{ request.path }}">Login</a>
+                        <a class="nav-link" href="{% url 'register_page' %}">Create Account</a>
+                    {% endif %}
+                </div>
             </div>
-        </div>
         </div>
     </nav>
 
-
-        <div class="col-sm-10">
-          <!-- add block content from html template -->
-          {% block content %}
-          {% endblock %}
-        </div>
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <div class="col-sm-10">
+        {% block content %}
+        {% endblock %}
     </div>
-  </body>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+</body>
 </html>
