--- a/portfolio_app/templates/portfolio_app/create_post.html
+++ b/portfolio_app/templates/portfolio_app/create_post.html
@@ -1,10 +1,15 @@
 {% extends "portfolio_app/base_template.html" %}
+
 {% block content %}
 <h1>Create Post</h1>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Create</button>
-</form>
+{% if user.is_authenticated %}
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Create</button>
+    </form>
+{% else %}
+    <p>Please <a href="{% url 'login' %}?next={% url 'create_post' %}">login</a> to create a post.</p>
+{% endif %}
 {% endblock %}
