--- a/portfolio_app/templates/portfolio_app/posts_page.html
+++ b/portfolio_app/templates/portfolio_app/posts_page.html
@@ -1,8 +1,8 @@
 {% extends "portfolio_app/base_template.html" %}
 {% block content %}
 <h1>All posts</h1>
-<a href="{% url 'create_post' %}" class="btn btn-primary">Create Post</a>
-<ul class="list-group">
+<a href="{% url 'create_post' %}" class="btn custom-primary-btn">Create Post</a>
+<ul class="list-group custom-container">
     {% for post in posts %}
         <li class="list-group-item">
             <strong>Location:</strong> {{ post.location }}<br>
@@ -10,9 +10,9 @@
             <strong>Number of Users Joined:</strong> {{ post.num_joined }}<br>
             <form action="{% url 'join_post' pk=post.pk %}" method="post" style="display:inline;">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-success">Join Post</button>
+                <button type="submit" class="btn custom-primary-btn">Join Post</button>
             </form>
-            <a href="{% url 'post_detail' pk=post.pk %}" class="btn btn-primary">View Details</a>
+            <a href="{% url 'post_detail' pk=post.pk %}" class="btn custom-success-btn">View Details</a>
         </li>
     {% endfor %}
 </ul>
