--- a/portfolio_app/templates/portfolio_app/register.html
+++ b/portfolio_app/templates/portfolio_app/register.html
@@ -1,7 +1,7 @@
 {% extends 'portfolio_app/base_template.html' %}
 
 {% block content %}
-  <h2>DG user registration</h2>
+  <h2>DG User Registration</h2>
 
   <form method="post">
     {% csrf_token %}
